# Med-CrossViT

./: Makefile  README.md  pyproject.toml
data/: example_metadata.csv
docs/: dataset.md  med_crossvit.md
src/med_crossvit/: __init__.py  dataset.py  med_crossvit.py
