[project]
name = "med-crossvit"
version = "0.1.0"
description = "Med-CrossViT: A WSI-RNA-Seq fusion model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch<2.4.1",
    "einops>=0.8.0",
    "h5py>=3.12.1",
    "pandas>=2.2.3",
    "numpy>=2.0.2",
    "scikit-learn",
    "build>=1.2.2.post1",
    "accelerate>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
