[project]
name = "med-crossvit"
version = "0.1.0"
description = "Med-CrossViT: A WSI-RNA-Seq fusion model"
readme = "README.md"
requires-python = "==3.10.*"

dependencies = [
    "torch<2.2.0",
    "einops>=0.8.0",
    "h5py>=3.12.1",
    "pandas>=2.2.3",
    "numpy>=2.0.2",
    "scikit-learn",
    "build>=1.2.2.post1",
    "accelerate>=1.0.1",
    "lazydocs==0.4.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true